@@ -699,6 +699,19 @@ void EditBodyDlg::connectSignals()
 	connect(m_pctrlClipPlanePos, SIGNAL(sliderMoved(int)), m_pGLWidget, SLOT(onClipPlane(int)));
 	connect(m_pHorizontalSplitter, SIGNAL(splitterMoved(int,int)), this, SLOT(onResize()));
 
+	connect(m_pGLWidget, SIGNAL(viewModified()), this, SLOT(onCheckViewIcons()));
+}
+
+
+/**
+ * Unselects all the 3D-view icons.
+ */
+void EditBodyDlg::onCheckViewIcons()
+{
+	m_pctrlIso->setChecked(false);
+	m_pctrlX->setChecked(false);
+	m_pctrlY->setChecked(false);
+	m_pctrlZ->setChecked(false);
 }
 
 
