@@ -16,6 +16,7 @@
 
 
 xflr5 v6.13 January xxxth, 2016
+	- added an option to autosave the project at regular time intervals
 	- changed the panel force display to q.Cp instead of q.S.panel_area; this is more significant since the arrow lengths are now mesh independent.
 	- added the extra drag in the calculation of the plane's total drag coefficient
 	- fixed the issue of slow display in Inverse design
